# revm

./: .gitignore  Cargo.toml
bins/dbtool/: Cargo.toml
bins/dbtool/src/: cmd.rs  lib.rs  main.rs
bins/dbtool/src/cmd/: cache_killer.rs  migration.rs
bins/revme/: Cargo.toml  recover.sh  trim_point_evaluation_txs.py
bins/revme/data/: bals_1.json  blockHashes.json  blockHashes_1.json  blocks.json  blocks_1.json  gasused_1.json
bins/revme/src/: cmd.rs
bins/revme/src/cmd/: bal_test.rs  bal_worst.rs  balsize.rs  blockchaintest.rs
crates/bytecode/: Cargo.toml
crates/bytecode/src/: bytecode.rs
crates/context/: Cargo.toml
crates/context/interface/: Cargo.toml
crates/context/interface/src/: context.rs  transaction.rs
crates/context/interface/src/transaction/: eip7702.rs  either.rs
crates/context/src/: block.rs  block_states.rs  context.rs  lib.rs
crates/database/: Cargo.toml
crates/database/interface/src/: async_db.rs  bal.rs  empty_db.rs
crates/database/src/states/: account_status.rs  cache.rs  cache_account.rs  state.rs  state_builder.rs
crates/flatdb/: Cargo.toml
crates/flatdb/src/: lib.rs  libmdbx.rs  mtcache.rs  node.rs  preblock_db_provider.rs  provider_api.rs
crates/handler/: Cargo.toml
crates/handler/src/: mainnet_builder.rs  pre_execution.rs
crates/libmdbx/: Cargo.toml
crates/libmdbx/src/: lib.rs
crates/libmdbx/src/api/: common.rs  cursor.rs  database.rs  error.rs  mod.rs  table.rs  transaction.rs
crates/libmdbx/src/api/tables/: mod.rs  models.rs  raw.rs  scale.rs
crates/libmdbx/src/backend/: metrics.rs  mod.rs
crates/librocksdb/: Cargo.toml
crates/librocksdb/src/: lib.rs  rlp.rs  store.rs  table.rs
crates/librocksdb/src/ethrex_storage/: error.rs  metadata.rs  mod.rs
crates/librocksdb/src/ethrex_storage/api/: mod.rs  tables.rs
crates/librocksdb/src/ethrex_storage/backend/: mod.rs  rocksdb.rs
crates/op-revm/: Cargo.toml
crates/precompile/src/: kzg_point_evaluation.rs
crates/state/: Cargo.toml
crates/state/src/: account_info.rs  bal.rs  lib.rs
crates/state/src/bal/: account.rs  writes.rs
examples/cheatcode_inspector/src/: main.rs
