[package]
name = "dbtool"
version = "0.1.0"
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true

[lints]
workspace = true
