[package]
name = "dbtool"
version = "0.1.0"
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
flatdb.workspace = true
reth_db_api = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-db-api", features = [
    "test-utils",
] }
librocksdb.workspace = true
alloy-primitives.workspace = true
reth_primitives_traits.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
