[package]
name = "librocksdb"
version = "0.1.0"
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# rocksdb related
thiserror.workspace = true
rocksdb = { version = "0.24.0", default-features = false, features = [
    "bindgen-runtime",
    "lz4",
] }
tracing = { version = "0.1", features = ["log"] }
# ethrex_storage = { git = "https://github.com/lambdaclass/ethrex.git", package = "ethrex-storage", features = [
#     "rocksdb",
# ] }
serde_json.workspace = true
serde.workspace = true


# reth related
alloy-primitives.workspace = true
reth_primitives_traits.workspace = true
reth_storage_api = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-storage-api" }
reth_db_api = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-db-api" }
reth_db = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-db" }

# revm related
revm = { workspace = true, features = [
    "std",
    "c-kzg",
    "blst",
    "tracer",
    "parse",
] }
flatdb.workspace = true


[dev-dependencies]
tempfile.workspace = true
